# ecg-shift-bench

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/datasets/: chapman.yaml  code15.yaml  ptbxl.yaml  sph.yaml
configs/datasets/snapshots/: ptbxl-1.0.3-six-label-v1.yaml
configs/experiments/: dataset_discriminator.yaml  issue11_internal_baselines.yaml  leave_one_domain_out.yaml  multi_source.yaml  ptbxl_source_only_resnet1d_wang_e1.yaml  registry.yaml  resnet1d_internal_dataset_baseline.yaml  source_only.yaml  uda_dann.yaml
data/: README.md
docs/: benchmark_design.md  dataset_cards.md  dataset_discriminator_results.md  dataset_discriminator_study.md  dataset_statistics.md  label_harmonization.md  ptbxl_source_only_resnet1d_wang_baseline.md  reproducibility.md  source_only_cross_domain_baseline.md
ecgshiftbench/: __init__.py
ecgshiftbench/benchmarks/: __init__.py  base.py  covariate_shift.py  domain_generalization.py  uda.py
ecgshiftbench/datasets/: __init__.py  base.py  chapman.py  cpsc2018.py  g12ec.py  ptbxl.py
ecgshiftbench/metrics/: __init__.py  classification.py
ecgshiftbench/models/: __init__.py  resnet1d.py
ecgshiftbench/utils/: __init__.py  preprocessing.py
examples/: run_covariate_shift.py  run_domain_generalization.py  run_uda.py
outputs/dataset_statistics/: dataset_statistics_report.md
outputs/dataset_statistics/chapman/: audit.json  label_distribution.csv  test.csv  (+9 more)
outputs/issue11_internal_baseline_results/: README.md  results_summary.csv
outputs/resnet1d_internal_dataset_baseline_results/: README.md  per_class_summary.csv  results_summary.csv
scripts/: audit_alignment.py  create_splits.py  evaluate.py  export_dataset_statistics.py  preflight_source_only_pairs.py  prepare_dataset.py  run_dataset_discriminator_overnight.sh  summarize_results.py  train.py  train_dataset_discriminator.py  visualize_dataset_statistics.py
src/ecg_shift_bench/: __init__.py  internal_dataset_baseline_reporting.py  issue11_reporting.py
tests/: test_benchmarks.py  test_dataset_alignment.py  test_dataset_audit.py  test_dataset_discriminator.py  test_dataset_discriminator_training.py  test_dataset_interface.py  test_dataset_statistics.py  test_datasets.py  test_discriminator_metrics.py  test_evaluate_script.py  test_internal_dataset_baseline.py  test_internal_dataset_baseline_reporting.py  test_issue11_baseline.py  test_issue11_reporting.py  test_label_mapping.py  test_metrics.py  test_model_registry.py  test_models.py  test_preflight_source_only_pairs_script.py  test_preprocessing.py  test_ptbxl_baseline.py  test_source_only_cross_domain.py  test_source_only_scripts.py  test_splits.py  test_train_dataset_discriminator_script.py  test_train_script.py  test_visualize_dataset_statistics.py
(+117 files in other folders)
