[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecgshiftbench"
version = "0.1.0"
description = "A cross-dataset benchmark for studying covariate shift, domain generalization, and unsupervised domain adaptation in 12-lead ECG classification"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "ECGShiftBench Contributors" }
]
keywords = ["ecg", "benchmark", "domain adaptation", "covariate shift", "deep learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "torch>=1.13",
    "wfdb>=4.0",
    "h5py>=3.7",
    "tqdm>=4.64",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jeremykid/ecg-shift-bench"
Repository = "https://github.com/jeremykid/ecg-shift-bench"
Issues = "https://github.com/jeremykid/ecg-shift-bench/issues"

[tool.setuptools.packages.find]
include = ["ecgshiftbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
