[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-shift-bench"
version = "0.1.0"
description = "Cross-dataset domain adaptation benchmark for 12-lead ECG classification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "ECGShiftBench contributors"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "pyyaml>=6.0",
  "tqdm>=4.64",
  "torch>=2.0",
  "wfdb>=4.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
